# VR-Player

./: CMakeLists.txt  README.md
360View/: 360View.sln
360View/360View/: 360View.vcxproj  360View.vcxproj.filters  LoadShader.cpp  LoadShader.h  generateSphere.cpp  generateSphere.h  main.cpp
360View/360View/Debug/: vc120.idb
360View/360View/Debug/360View.tlog/: 360View.lastbuildstate  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
360View/360View/lib/: SOIL.lib  glfw3.lib
360View/360View/shader/: triangles.frag  triangles.vert
360View/Debug/: 360View.ilk
includes/: root_directory.h  sphereProperty.h
lib/: glfw3.lib
resources/shader/: fragmentShader  vertexShader
src/: main.cpp  sphereProperty.cpp
